--- a/.github/workflows/Fetch_image.yml
+++ b/.github/workflows/Fetch_image.yml
@@ -20,6 +20,6 @@ jobs:
       run: |
         git config --global user.name 'GitHub Actions'
         git config --global user.email 'actions@github.com'
-        git add wakatime-stats.svg
+        git add assets/wakatime-stats.svg
         git commit -m 'Update Wakatime stats'
         git push
