--- a/.github/workflows/waka.yaml
+++ b/.github/workflows/waka.yaml
@@ -11,7 +11,7 @@ jobs:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: 9OmP/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -24,5 +24,5 @@ jobs:
           SHOW_LOC_CHART: "False"
           DEBUG_LOGGING: "False"
           SHOW_LANGUAGE_PER_REPO: "True"
-          SYMBOL_VERSION: 3
+          SYMBOL_VERSION: 7
           
