--- a/.github/workflows/waka.yaml
+++ b/.github/workflows/waka.yaml
@@ -24,5 +24,5 @@ jobs:
           SHOW_LOC_CHART: "False"
           DEBUG_LOGGING: "False"
           SHOW_LANGUAGE_PER_REPO: "True"
-          SYMBOL_VERSION: 2
+          INPUT_SYMBOL_VERSION: 1
           
